tests/invalid/break_outside_loop.wio
fn Entry(args: string[]) -> i32 {
    break;
    return 0;
}
